fix: Fix active color overflow of the Input with the search icon in the Search component

--- a/www/src/styles/algolia/style.css
+++ b/www/src/styles/algolia/style.css
@@ -63,6 +63,7 @@ html.dark {
 }
 .DocSearch-Search-Icon {
   stroke-width: 1.6;
+  margin-right: 15px;
 }
 .DocSearch-Button .DocSearch-Search-Icon {
   color: var(--docsearch-text-color);
